fix(web): overflow scrollbar

--- a/web/src/main.css
+++ b/web/src/main.css
@@ -89,8 +89,32 @@ body {
   user-select: none;
   background: none !important;
   overflow: hidden;
+
+  --sb-track-color: #232e33;
+  --sb-thumb-color: #6baaaf;
+  --sb-size: 6px;
 }
 
 html {
   color-scheme: normal !important;
+}
+
+::-webkit-scrollbar {
+  width: var(--sb-size)
+}
+
+::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 3px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
 }
